src/objects/QB_Credit_Notes__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_Dimension_2__c</fullName>
        <label>FF Dimension 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IR2_Item__c</fullName>
        <formula>IF ( Left (Customer__c,8)=&quot;BGE Home&quot;, &quot;FFA Lease Product&quot;, &quot;FFA Sale Product&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IR2 Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Credit_Note_Header__c</fullName>
        <label>QB Credit Note Header</label>
        <referenceTo>QB_Credit_Note_Header__c</referenceTo>
        <relationshipLabel>QB Credit Notes</relationshipLabel>
        <relationshipName>QB_Credit_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RS_Project_ID__c</fullName>
        <label>RS Project ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefNumber__c</fullName>
        <label>RefNumber</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrnLine_Amount__c</fullName>
        <label>TrnLine Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrnLine_Description__c</fullName>
        <label>TrnLine Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrxID__c</fullName>
        <label>TrxID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TxnDate__c</fullName>
        <label>TxnDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TxnLine_Item__c</fullName>
        <label>TxnLine Item</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>QB Credit Notes</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Customer__c</columns>
        <columns>PO_Number__c</columns>
        <columns>RefNumber__c</columns>
        <columns>TrnLine_Amount__c</columns>
        <columns>TxnLine_Item__c</columns>
        <columns>TrnLine_Description__c</columns>
        <columns>TrxID__c</columns>
        <columns>TxnDate__c</columns>
        <columns>IR2_Item__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>QB Credit Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Credit Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>